--- a/projects/index.html
+++ b/projects/index.html
@@ -145,7 +145,7 @@ MDCF"/>
     Phone/Fax: +1 (785) 532-6350/7353<br/>
     E-mail: <a href="mailto:robby@k-state.edu">robby@k-state.edu</a><br/>
     <br/>
-    <a href="http://www.informatik.uni-trier.de/~ley/pers/hd/r/Robby:.html">Bib</a>
+    <a href="https://dblp.uni-trier.de/pid/98/4700.html">Bib</a>
     &nbsp; <a href="http://scholar.google.com/citations?user=j5aiHcsAAAAJ">Citations</a>
     &nbsp; <a href="http://sireum.org">Sireum</a><br/>
     </td>
