--- a/papers/index.html
+++ b/papers/index.html
@@ -144,7 +144,8 @@ Hariharan Thiagarajan, John Hatcliff, Robby: Awas: An Information Flow and Error
     <br/>
     <a href="https://dblp.uni-trier.de/pid/98/4700.html">Bib</a>
     &nbsp; <a href="http://scholar.google.com/citations?user=j5aiHcsAAAAJ">Citations</a>
-    &nbsp; <a href="http://sireum.org">Sireum</a><br/>
+    &nbsp; <a href="http://sireum.org">Sireum</a>
+    &nbsp; <a href="http://compilers.santoslab.org">CIS 706/801</a><br/>
     </td>
     </tr>
     </tbody>
