--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
-<link rel="canonical" href="http://robby.santoslab.org/404.html" />
+<link rel="canonical" href="https://robby.santoslab.org/404.html" />
 
 
     <title>
@@ -25,23 +25,23 @@
 
 
 
-<link rel="stylesheet" href="http://robby.santoslab.org/main.42b9ec98476d29816c041b06a7212dea24f156531ed9c5859ab2d9d1f21d901e.css">
+<link rel="stylesheet" href="https://robby.santoslab.org/main.42b9ec98476d29816c041b06a7212dea24f156531ed9c5859ab2d9d1f21d901e.css">
 
 
 
-    <link rel="apple-touch-icon" sizes="180x180" href="http://robby.santoslab.org/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="http://robby.santoslab.org/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="http://robby.santoslab.org/favicon-16x16.png">
-    <link rel="manifest" href="http://robby.santoslab.org/site.webmanifest">
-    <link rel="mask-icon" href="http://robby.santoslab.org/safari-pinned-tab.svg" color="">
-    <link rel="shortcut icon" href="http://robby.santoslab.org/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://robby.santoslab.org/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://robby.santoslab.org/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://robby.santoslab.org/favicon-16x16.png">
+    <link rel="manifest" href="https://robby.santoslab.org/site.webmanifest">
+    <link rel="mask-icon" href="https://robby.santoslab.org/safari-pinned-tab.svg" color="">
+    <link rel="shortcut icon" href="https://robby.santoslab.org/favicon.ico">
     <meta name="msapplication-TileColor" content="">
 
 
 <meta itemprop="name" content="404 Page not found">
 <meta itemprop="description" content="Robby&#39;s Homepage">
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="http://robby.santoslab.org"/>
+<meta name="twitter:image" content="https://robby.santoslab.org"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Robby&#39;s Homepage"/>
@@ -70,7 +70,7 @@
         <div class="container">
             <header class="header">
     <span class="header__inner">
-        <a href="http://robby.santoslab.org/" style="text-decoration: none;">
+        <a href="https://robby.santoslab.org/" style="text-decoration: none;">
     <div class="logo">
         
             <span class="logo__mark"> </span>
@@ -88,7 +88,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="http://robby.santoslab.org/funding/">Funding</a></li><li><a href="http://robby.santoslab.org/projects/">Projects</a></li><li><a href="http://robby.santoslab.org/teaching/">Teaching</a></li>
+    <ul class="menu__inner"><li><a href="https://robby.santoslab.org/funding/">Funding</a></li><li><a href="https://robby.santoslab.org/projects/">Projects</a></li><li><a href="https://robby.santoslab.org/teaching/">Teaching</a></li>
     </ul>
 </nav>
 
@@ -119,9 +119,9 @@
             <h1>404</h1>
             <p>Oops, page not found…</p>
             <p class="btn-404">
-                <a href="http://robby.santoslab.org">
+                <a href="https://robby.santoslab.org">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>Home</a>
-                <a href="http://robby.santoslab.org/posts">
+                <a href="https://robby.santoslab.org/posts">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-archive"><polyline points="21 8 21 21 3 21 3 8"></polyline><rect x="1" y="3" width="22" height="5"></rect><line x1="10" y1="12" x2="14" y2="12"></line></svg>Archives</a>
             </p>
         </div>
@@ -142,7 +142,7 @@
 
 
 
-<script type="text/javascript" src="http://robby.santoslab.org/bundle.min.feebdc8d801e3fb1791305e362b6d11557f029604dd5b3c27e2686bc88787ee90ae1ccf0afe81bd7d959d7617cfe1fc73062aa82b4e1fa830d6941193d2cbddf.js" integrity="sha512-/uvcjYAeP7F5EwXjYrbRFVfwKWBN1bPCfiaGvIh4fukK4czwr&#43;gb19lZ12F8/h/HMGKqgrTh&#43;oMNaUEZPSy93w=="></script>
+<script type="text/javascript" src="https://robby.santoslab.org/bundle.min.bb2c6bc3ed452ca4759660e4020811f248bc2320081559e8a32d8b0092773852941133639d35e8370d03d3ddaa750b1edd6b343c5bd22a55d5bdeae8f648f49b.js" integrity="sha512-uyxrw&#43;1FLKR1lmDkAggR8ki8IyAIFVnooy2LAJJ3OFKUETNjnTXoNw0D092qdQse3Ws0PFvSKlXVvero9kj0mw=="></script>
 
 
 
