--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
-<link rel="canonical" href="http://robby.santoslab.org/" />
+<link rel="canonical" href="https://robby.santoslab.org/" />
 
 
     <title>
@@ -25,23 +25,23 @@
 
 
 
-<link rel="stylesheet" href="http://robby.santoslab.org/main.42b9ec98476d29816c041b06a7212dea24f156531ed9c5859ab2d9d1f21d901e.css">
+<link rel="stylesheet" href="https://robby.santoslab.org/main.42b9ec98476d29816c041b06a7212dea24f156531ed9c5859ab2d9d1f21d901e.css">
 
 
 
-    <link rel="apple-touch-icon" sizes="180x180" href="http://robby.santoslab.org/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="http://robby.santoslab.org/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="http://robby.santoslab.org/favicon-16x16.png">
-    <link rel="manifest" href="http://robby.santoslab.org/site.webmanifest">
-    <link rel="mask-icon" href="http://robby.santoslab.org/safari-pinned-tab.svg" color="">
-    <link rel="shortcut icon" href="http://robby.santoslab.org/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://robby.santoslab.org/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://robby.santoslab.org/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://robby.santoslab.org/favicon-16x16.png">
+    <link rel="manifest" href="https://robby.santoslab.org/site.webmanifest">
+    <link rel="mask-icon" href="https://robby.santoslab.org/safari-pinned-tab.svg" color="">
+    <link rel="shortcut icon" href="https://robby.santoslab.org/favicon.ico">
     <meta name="msapplication-TileColor" content="">
 
 
 <meta itemprop="name" content="Robby&#39;s Homepage">
 <meta itemprop="description" content="Robby&#39;s Homepage">
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="http://robby.santoslab.org"/>
+<meta name="twitter:image" content="https://robby.santoslab.org"/>
 
 <meta name="twitter:title" content="Robby&#39;s Homepage"/>
 <meta name="twitter:description" content="Robby&#39;s Homepage"/>
@@ -54,7 +54,7 @@
 
 
 
-<link rel="alternate" type="application/rss+xml" href="http://robby.santoslab.org/index.xml" title="Robby's Homepage" />
+<link rel="alternate" type="application/rss+xml" href="https://robby.santoslab.org/index.xml" title="Robby's Homepage" />
 
 
 
@@ -71,7 +71,7 @@
         <div class="container">
             <header class="header">
     <span class="header__inner">
-        <a href="http://robby.santoslab.org/" style="text-decoration: none;">
+        <a href="https://robby.santoslab.org/" style="text-decoration: none;">
     <div class="logo">
         
             <span class="logo__mark"> </span>
@@ -89,7 +89,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="http://robby.santoslab.org/funding/">Funding</a></li><li><a href="http://robby.santoslab.org/projects/">Projects</a></li><li><a href="http://robby.santoslab.org/teaching/">Teaching</a></li>
+    <ul class="menu__inner"><li><a href="https://robby.santoslab.org/funding/">Funding</a></li><li><a href="https://robby.santoslab.org/projects/">Projects</a></li><li><a href="https://robby.santoslab.org/teaching/">Teaching</a></li>
     </ul>
 </nav>
 
@@ -120,7 +120,7 @@
     <tbody>
     <tr>
     <td style="vertical-align: top; padding: 0 5px 0 0;">
-    <img src="http://robby.santoslab.org/img/robby.png" width="230px" alt="Robby" align="left" />
+    <img src="https://robby.santoslab.org/img/robby.png" width="230px" alt="Robby" align="left" />
     </td>
     <td style="vertical-align: top;"><br/>
     <font style="font-weight: bold;" size="+2">Robby</font><br/>
@@ -182,7 +182,7 @@
 
 
 
-<script type="text/javascript" src="http://robby.santoslab.org/bundle.min.feebdc8d801e3fb1791305e362b6d11557f029604dd5b3c27e2686bc88787ee90ae1ccf0afe81bd7d959d7617cfe1fc73062aa82b4e1fa830d6941193d2cbddf.js" integrity="sha512-/uvcjYAeP7F5EwXjYrbRFVfwKWBN1bPCfiaGvIh4fukK4czwr&#43;gb19lZ12F8/h/HMGKqgrTh&#43;oMNaUEZPSy93w=="></script>
+<script type="text/javascript" src="https://robby.santoslab.org/bundle.min.bb2c6bc3ed452ca4759660e4020811f248bc2320081559e8a32d8b0092773852941133639d35e8370d03d3ddaa750b1edd6b343c5bd22a55d5bdeae8f648f49b.js" integrity="sha512-uyxrw&#43;1FLKR1lmDkAggR8ki8IyAIFVnooy2LAJJ3OFKUETNjnTXoNw0D092qdQse3Ws0PFvSKlXVvero9kj0mw=="></script>
 
 
 
