--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 
-<link rel="stylesheet" href="https://robby.santoslab.org/main.63bff92087267840203a6bfd0a840c0dd5acf394bc25564a176636fb6b987a82.css" integrity="sha256-Y7/5IIcmeEAgOmv9CoQMDdWs85S8JVZKF2Y2&#43;2uYeoI=">
+<link rel="stylesheet" href="https://robby.santoslab.org/main.15c2a63e7b256ebbad1cc2e22b188229283d7469ccb59043cf3c271510caca93.css" integrity="sha256-FcKmPnslbrutHMLiKxiCKSg9dGnMtZBDzzwnFRDKypM=">
 
 
 
@@ -177,14 +177,15 @@
             
         </div>
 
-        
-
-
-<script type="text/javascript" src="https://robby.santoslab.org/bundle.min.fb8aea4cfe2c67bdb3a859169f04f5b89012626f585389ff6b23fe2d3abe861228d6960eb74e4e8e4e5abb8abe367aeb4cf0aab17877e8b17c66380e907e9335.js" integrity="sha512-&#43;4rqTP4sZ72zqFkWnwT1uJASYm9YU4n/ayP&#43;LTq&#43;hhIo1pYOt05Ojk5au4q&#43;NnrrTPCqsXh36LF8ZjgOkH6TNQ=="></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
 
 
+<script type="text/javascript" src="https://robby.santoslab.org/bundle.min.b3aec1dd79925ab5e2fd16be10d7fe27c49fc31ff1bf4ddc27eda0f7b9cce380b78aa2e4a3b3b09a8158023d3d7ca114feca3f977e57e0d5653e9ae817d269f1.js" integrity="sha512-s67B3XmSWrXi/Ra&#43;ENf&#43;J8Sfwx/xv03cJ&#43;2g97nM44C3iqLko7OwmoFYAj09fKEU/so/l35X4NVlPproF9Jp8Q=="></script>
 
-<script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"></script>
+
+<script defer type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/thecarnie-cycle2/2.1.6c/jquery.cycle2.min.js"></script>
+<script defer type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"></script>
+
     </body>
 </html>
