--- a/funding/index.html
+++ b/funding/index.html
@@ -52,7 +52,7 @@ Duration: May 2021 - April 2023 SIRFUR: Software Implementation from Rigorous Fo
 Robby (K-State PI), John Hatcliff; and Todd Carpenter (Lead PI) at Adventium Labs
 Defense Advanced Research Projects Agency (DARPA) Small Business Innovation Research (SBIR) Phase II">
 
-<meta itemprop="wordCount" content="1062"><meta itemprop="image" content="https://robby.santoslab.org"/>
+<meta itemprop="wordCount" content="1089"><meta itemprop="image" content="https://robby.santoslab.org"/>
 <meta itemprop="keywords" content="" />
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://robby.santoslab.org"/>
@@ -232,7 +232,11 @@ Duration: April - August 2019
 
 <hr>
 
-
+<b>Fault Injection and Analysis for Safety and Security</b><br>
+<a href="https://hatcliff.santoslab.org">John Hatcliff</a> (PI), <a href="https://robby.santoslab.org">Robby</a>, <a href="https://people.cs.ksu.edu/~eyv/">Eugene Vasserman</a><br>
+<a href="https://www.sei.cmu.edu/">Software Engineering Institute (SEI)</a><br>
+Project total: <tt>$100,500</tt><br>
+Duration: February 2018 - January 2019
 
 <hr>
 
