--- a/teaching/index.html
+++ b/teaching/index.html
@@ -26,7 +26,8 @@ CIS 301: Logical Foundations of Programming" />
 
 
 
-<link rel="stylesheet" href="https://robby.santoslab.org/main.ab2f9954225859e92bf3ce0ff4062104dcce721b5e0c0fabedfab58e9cd5fcb9.css" integrity="sha256-qy&#43;ZVCJYWekr884P9AYhBNzOchteDA&#43;r7fq1jpzV/Lk=">
+
+<link rel="stylesheet" href="https://robby.santoslab.org/main.02cb214e1e3727b561fef2098e3a67c305017065c892710f2cb6493e772dd514.css" integrity="sha256-AsshTh43J7Vh/vIJjjpnwwUBcGXIknEPLLZJPnct1RQ=">
 
 
 
@@ -211,6 +212,5 @@ CIS 301: Logical Foundations of Programming"/>
 
 <script defer type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/thecarnie-cycle2/2.1.6c/jquery.cycle2.min.js"></script>
 <script defer type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"></script>
-
     </body>
 </html>
