--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css" integrity="sha512-Cv93isQdFwaKBV+Z4X8kaVBYWHST58Xb/jVOcV9aRsGSArZsgAnFIhMpDoMDcFNoUtday1hdjn0nGp3+KZyyFw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.14/themes/default/style.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.14/themes/default-dark/style.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
 
 
-<link rel="stylesheet" href="https://robby.santoslab.org/main.02cb214e1e3727b561fef2098e3a67c305017065c892710f2cb6493e772dd514.css" integrity="sha256-AsshTh43J7Vh/vIJjjpnwwUBcGXIknEPLLZJPnct1RQ=">
+<link rel="stylesheet" href="https://robby.santoslab.org/main.d9d8cc36352d82a491a3df4ee037c406742ce7b387cc8b3705470689bf5177e7.css" integrity="sha256-2djMNjUtgqSRo99O4DfEBnQs57OHzIs3BUcGib9Rd&#43;c=">
 
 
 
@@ -151,7 +153,6 @@
     E-mail: <a href="mailto:robby@k-state.edu">robby@k-state.edu</a><br/>
     <br/>
     <a href="https://dblp.uni-trier.de/pid/98/4700.html">Bib</a>
-    &nbsp; <a href="https://scholar.google.com/citations?user=j5aiHcsAAAAJ">Citations</a>
     &nbsp; <a href="http://sireum.org">Sireum</a>
     </td>
     </tr>
@@ -198,14 +199,34 @@ Fengguo Wei, <a href="https://www.cs.bgsu.edu/sanroy/">Sankardas Roy</a>, <a hre
             
         </div>
 
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous"></script>
 
 
 
-<script type="text/javascript" src="https://robby.santoslab.org/bundle.min.516ef6f0d37475767eddd82a274e44419b39487537e999d82058842ecab2557928f50f2b42cc88ec96e44cabf65098c810ef6c502ddac95b7414edc516db454d.js" integrity="sha512-UW728NN0dXZ&#43;3dgqJ05EQZs5SHU36ZnYIFiELsqyVXko9Q8rQsyI7JbkTKv2UJjIEO9sUC3ayVt0FO3FFttFTQ=="></script>
+<script type="text/javascript" src="https://robby.santoslab.org/bundle.min.9f0d2b5f7b1b3528ed20d0a72d686c1f08346d1d1ed7cb1ee9c125a41427b43bb21474f0c6544f8cefe2ba428ae12215d4b4d049de38740ffd7f748bdf41615d.js" integrity="sha512-nw0rX3sbNSjtINCnLWhsHwg0bR0e18se6cElpBQntDuyFHTwxlRPjO/iukKK4SIV1LTQSd44dA/9f3SL30FhXQ=="></script>
 
 
-<script defer type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/thecarnie-cycle2/2.1.6c/jquery.cycle2.min.js"></script>
-<script defer type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"></script>
+<script defer type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/thecarnie-cycle2/2.1.6c/jquery.cycle2.min.js" integrity="sha512-ydWfQuPu+srw5hhkU8O1XGn3/Kc+GyoDBvYc8E+SyuZKphQP18ZWYKywIFzPWZwQk6dlmTY69aDg/SnFz3qPeQ==" crossorigin="anonymous"></script>
+<script defer type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js" integrity="sha512-rpLlll167T5LJHwp0waJCh3ZRf7pO6IT1+LZOhAyP6phAirwchClbTZV3iqL3BMrVxIYRbzGTpli4rfxsCK6Vw==" crossorigin="anonymous"></script>
+<script defer type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.14/jstree.min.js" integrity="sha512-OQ2by9SrJBwcXaeYmkG2t6FVZiwpyRtFar2VvULjuq5OjVpJLwsUHuNzN9PClqEJAYsWsRPSb4TTfriZzPGiow==" crossorigin="anonymous"></script>
+<script style="text/javascript">
+  window.addEventListener('load', function () {
+    $('#page-tree').jstree({
+      "core": {
+        "themes": {
+          "name": document.documentElement.getAttribute("data-theme") == "dark" ? "default-dark" : "default",
+          "dots": true,
+          "icons": false,
+          "variant": "large"
+        }
+      },
+      plugins: [ "ui" ],
+    }).bind("select_node.jstree", function (e, data) {
+      document.location.href = data.node.a_attr.href;
+    });
+  });
+</script>
+
+
     </body>
 </html>
