--- a/funding/index.html
+++ b/funding/index.html
@@ -33,7 +33,7 @@ Defense Advanced Research Projects Agency (DARPA) Small Business Innovation Rese
 
 
 
-<link rel="stylesheet" href="https://robby.santoslab.org/main.725a980b215f9a35e5d1012b26245fcd59f3d8916e9dba70e8f3d8cf0b3b20ed.css" integrity="sha256-clqYCyFfmjXl0QErJiRfzVnz2JFunbpw6PPYzws7IO0=">
+<link rel="stylesheet" href="https://robby.santoslab.org/main.c6adef0b9237cde861e5644c55eb8133472715f47f834744d433b43415cd5345.css" integrity="sha256-xq3vC5I3zehh5WRMVeuBM0cnFfR/g0dE1DO0NBXNU0U=">
 
 
 
@@ -92,6 +92,12 @@ Defense Advanced Research Projects Agency (DARPA) Small Business Innovation Rese
     
         <div class="container">
             <header class="header">
+    <span class="menu-trigger">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M0 0h24v24H0z" fill="none"/>
+            <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>
+        </svg>
+    </span>
     <span class="header__inner">
         <a href="https://robby.santoslab.org/" style="text-decoration: none;">
     <div class="logo">
@@ -138,16 +144,10 @@ Defense Advanced Research Projects Agency (DARPA) Small Business Innovation Rese
   </ul>
 </nav>
 
-                <span class="menu-trigger">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <path d="M0 0h24v24H0z" fill="none"/>
-                        <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>
-                    </svg>
-                </span>
             
-              <span class="theme-toggle not-selectable"><img src="https://robby.santoslab.org/img/toggle.png"></span>
         </span>
     </span>
+        <span class="theme-toggle not-selectable"><img src="https://robby.santoslab.org/img/toggle.png" height="20px"></span>
 </header>
 
 
