--- a/funding/index.html
+++ b/funding/index.html
@@ -33,7 +33,7 @@ Defense Advanced Research Projects Agency (DARPA) Small Business Innovation Rese
 
 
 
-<link rel="stylesheet" href="https://robby.santoslab.org/main.8a429774ab57a6da5fc2b26b06c31024439f1d893d0a6057b8c38d016aecfd4c.css" integrity="sha256-ikKXdKtXptpfwrJrBsMQJEOfHYk9CmBXuMONAWrs/Uw=">
+<link rel="stylesheet" href="https://robby.santoslab.org/main.bb5800eee8f586a18b3279c31871b8200e8241f03fc81c3b9f32c53095be4e99.css" integrity="sha256-u1gA7uj1hqGLMnnDGHG4IA6CQfA/yBw7nzLFMJW&#43;Tpk=">
 
 
 
@@ -192,19 +192,19 @@ Defense Advanced Research Projects Agency (DARPA) Small Business Innovation Rese
                 <h3 id="funding">Funding</h3>
 <hr>
 <b>MAILLE: Microkernal Application Information fLow with Logic-based Enforcement</b><br>
-<a href="https://hatcliff.santoslab.org">John Hatcliff</a> (K-State PI), <a href="https://robby.santoslab.org">Robby</a>; and <a href="https://www.adventiumlabs.com/team-member/todd-carpenter">Todd Carpenter</a> (Lead PI) at <a href="https://www.adventiumlabs.com/">Adventium Labs</a><br>
+<a href="https://hatcliff.santoslab.org">John Hatcliff</a> (K-State PI), <a href="https://robby.santoslab.org">Robby</a>; and <a href="https://galois.com/team/todd-carpenter/">Todd Carpenter</a> (Lead PI) at <a href="https://www.adventiumlabs.com/">Adventium Labs</a><br>
 <a href="https://www.afrl.af.mil/">U.S. Air Force Research Laboratory (AFRL)</a> Small Business Innovation Research (SBIR) Phase II<br>
 Project total: <tt>$749,957</tt> (K-State's portion: <tt>$347,000</tt>)<br>
 Duration: May 2021 - April 2023
 <hr>
 <b>SIRFUR: Software Implementation from Rigorous Formal Usable Requirements</b><br>
-<a href="https://robby.santoslab.org">Robby</a> (K-State PI), <a href="https://hatcliff.santoslab.org">John Hatcliff</a>; and <a href="https://www.adventiumlabs.com/team-member/todd-carpenter">Todd Carpenter</a> (Lead PI) at <a href="https://www.adventiumlabs.com/">Adventium Labs</a><br>
+<a href="https://robby.santoslab.org">Robby</a> (K-State PI), <a href="https://hatcliff.santoslab.org">John Hatcliff</a>; and <a href="https://galois.com/team/todd-carpenter/">Todd Carpenter</a> (Lead PI) at <a href="https://www.adventiumlabs.com/">Adventium Labs</a><br>
 <a href="https://www.darpa.mil/">Defense Advanced Research Projects Agency (DARPA)</a> Small Business Innovation Research (SBIR) Phase II<br>
 Project total: <tt>$1,499,766</tt> (K-State's portion: <tt>$693,000</tt>)<br>
 Duration: October 2020 - December 2023
 <hr>
 <b>GUMBO II: Grand Unified Modeling of Behavior Operators</b><br>
-<a href="https://hatcliff.santoslab.org">John Hatcliff</a> (K-State PI), <a href="https://robby.santoslab.org">Robby</a>; and <a href="https://www.adventiumlabs.com/team-member/danielle-stewart-phd">Danielle Stewart</a> (Lead PI) at <a href="https://www.adventiumlabs.com/">Adventium Labs</a><br>
+<a href="https://hatcliff.santoslab.org">John Hatcliff</a> (K-State PI), <a href="https://robby.santoslab.org">Robby</a>; and <a href="https://galois.com/team/danielle-stewart/">Danielle Stewart</a> (Lead PI) at <a href="https://www.adventiumlabs.com/">Adventium Labs</a><br>
 <a href="https://www.avmc.army.mil/">U.S. Army Combat Capabilities Development Command (CCDC) Aviation & Missile Center</a> Small Business Innovation Research (SBIR) Phase II<br>
 Project total: <tt>$1,099,936</tt> (K-State's portion: <tt>$410,000</tt>)<br>
 Duration: August 2020 - August 2022
@@ -216,7 +216,7 @@ Project total: <tt>$1,139,909</tt><br>
 Duration: May 2019 - February 2022
 <hr>
 <b>Cyber Assured Systems Engineering (CASE): Architecture Translation and Information Flow Analysis for High-Assurance Embedded Systems with Separation Kernels</b><br>
-<a href="https://robby.santoslab.org">Robby</a> (K-State PI), <a href="https://hatcliff.santoslab.org">John Hatcliff</a> (Co-PI); and <a href="https://www.adventiumlabs.com/team-member/john-shackleton">John Shackleton</a> (Lead PI) and <a href="https://www.adventiumlabs.com/team-member/todd-carpenter">Todd Carpenter</a> at <a href="https://www.adventiumlabs.com/">Adventium Labs</a><br>
+<a href="https://robby.santoslab.org">Robby</a> (K-State PI), <a href="https://hatcliff.santoslab.org">John Hatcliff</a> (Co-PI); and <a href="https://galois.com/team/john-shackleton/">John Shackleton</a> (Lead PI) and <a href="https://galois.com/team/todd-carpenter/">Todd Carpenter</a> at <a href="https://www.adventiumlabs.com/">Adventium Labs</a><br>
 <a href="https://www.collinsaerospace.com/">Collins Aerospace</a> -- a sub-contract of <a href="https://www.darpa.mil/">Defense Advanced Research Projects Agency (DARPA)</a> <a href="https://www.darpa.mil/program/cyber-assured-systems-engineering">Cyber Assured Systems Engineering (CASE)</a> Other Transaction Agreement (OTA) no. HR00111890001<br>
 Sub-contract total: <tt>$950,000</tt> (K-State's portion: <tt>$375,000</tt>)<br>
 Duration: August 2018 - February 2022 (K-State's duration: August 2018 - April 2021)
@@ -228,13 +228,13 @@ Project total: <tt>$420,000</tt><br>
 Duration: May 2019 - September 2020
 <hr>
 <b>Information Flow Control for Microkernels</b><br>
-<a href="https://hatcliff.santoslab.org">John Hatcliff</a> (K-State PI), <a href="https://robby.santoslab.org">Robby</a>; and <a href="https://www.adventiumlabs.com/team-member/todd-carpenter">Todd Carpenter</a> (Lead PI) at <a href="https://www.adventiumlabs.com/">Adventium Labs</a><br>
+<a href="https://hatcliff.santoslab.org">John Hatcliff</a> (K-State PI), <a href="https://robby.santoslab.org">Robby</a>; and <a href="https://galois.com/team/todd-carpenter/">Todd Carpenter</a> (Lead PI) at <a href="https://www.adventiumlabs.com/">Adventium Labs</a><br>
 <a href="https://www.afrl.af.mil/">U.S. Air Force Research Laboratory (AFRL)</a> Small Business Innovation Research (SBIR) Phase I<br>
 Project total: <tt>$150,000</tt> (K-State's portion: <tt>$46,724</tt>)<br>
 Duration: July 2019 - January 2020
 <hr>
 <b>GUMBO: Grand Unified Modeling of Behavior Operators</b><br>
-<a href="https://hatcliff.santoslab.org">John Hatcliff</a> (K-State PI), <a href="https://robby.santoslab.org">Robby</a>; and <a href="https://www.adventiumlabs.com/team-member/rand-whillock">Rand Whillock</a> (Lead PI) and <a href="https://www.adventiumlabs.com/team-member/todd-carpenter">Todd Carpenter</a> at <a href="https://www.adventiumlabs.com/">Adventium Labs</a><br>
+<a href="https://hatcliff.santoslab.org">John Hatcliff</a> (K-State PI), <a href="https://robby.santoslab.org">Robby</a>; and <a href="https://galois.com/team/rand-whillock/">Rand Whillock</a> (Lead PI) and <a href="https://galois.com/team/todd-carpenter/">Todd Carpenter</a> at <a href="https://www.adventiumlabs.com/">Adventium Labs</a><br>
 <a href="https://www.avmc.army.mil/">U.S. Army Combat Capabilities Development Command (CCDC) Aviation & Missile Center</a> Small Business Innovation Research (SBIR) Phase I<br>
 Project total: <tt>$100,000</tt> (K-State's portion: <tt>$10,000</tt>)<br>
 Duration: April - August 2019
@@ -246,7 +246,7 @@ Project total: <tt>$100,500</tt><br>
 Duration: February 2018 - January 2019
 <hr>
 <b>Methodologies and Tools for Securing Medical Device Systems in Integrated Clinical Environments (ICE)</b><br>
-<a href="https://hatcliff.santoslab.org">John Hatcliff</a> (K-State PI), <a href="https://robby.santoslab.org">Robby</a>, <a href="https://people.cs.ksu.edu/~eyv/">Eugene Vasserman</a>; and <a href="https://www.adventiumlabs.com/team-member/rand-whillock">Rand Whillock</a> (Lead PI) and <a href="https://www.adventiumlabs.com/team-member/todd-carpenter">Todd Carpenter</a> at <a href="https://www.adventiumlabs.com/">Adventium Labs</a><br>
+<a href="https://hatcliff.santoslab.org">John Hatcliff</a> (K-State PI), <a href="https://robby.santoslab.org">Robby</a>, <a href="https://people.cs.ksu.edu/~eyv/">Eugene Vasserman</a>; and <a href="https://galois.com/team/rand-whillock/">Rand Whillock</a> (Lead PI) and <a href="https://galois.com/team/todd-carpenter/">Todd Carpenter</a> at <a href="https://www.adventiumlabs.com/">Adventium Labs</a><br>
 <a href="http://www.usamraa.army.mil/">U.S. Army Medical Research Acquisition Activity (USAMRAA)</a> Defense Health Program (DHP) -- Small Business Innovation Research (SBIR) DHP15-004, Phase II<br>
 Project total: <tt>$999,974.04</tt>; K-State's portion: <tt>$339,187</tt><br>
 Duration: September 2016 - September 2018
