--- a/projects/index.html
+++ b/projects/index.html
@@ -31,7 +31,7 @@ MDCF" />
 
 
 
-<link rel="stylesheet" href="https://robby.santoslab.org/main.8a429774ab57a6da5fc2b26b06c31024439f1d893d0a6057b8c38d016aecfd4c.css" integrity="sha256-ikKXdKtXptpfwrJrBsMQJEOfHYk9CmBXuMONAWrs/Uw=">
+<link rel="stylesheet" href="https://robby.santoslab.org/main.bb5800eee8f586a18b3279c31871b8200e8241f03fc81c3b9f32c53095be4e99.css" integrity="sha256-u1gA7uj1hqGLMnnDGHG4IA6CQfA/yBw7nzLFMJW&#43;Tpk=">
 
 
 
