--- a/funding/index.html
+++ b/funding/index.html
@@ -55,12 +55,10 @@ Duration: May 2021 - April 2023 SIRFUR: Software Implementation from Rigorous Fo
 Robby (K-State PI), John Hatcliff; and Todd Carpenter (Lead PI) at Adventium Labs
 Defense Advanced Research Projects Agency (DARPA) Small Business Innovation Research (SBIR) Phase II">
 
-<meta itemprop="wordCount" content="1089"><meta itemprop="image" content="https://robby.santoslab.org"/>
+<meta itemprop="wordCount" content="1089"><meta itemprop="image" content="https://robby.santoslab.org" />
 <meta itemprop="keywords" content="" />
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://robby.santoslab.org"/>
-
-<meta name="twitter:title" content=""/>
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://robby.santoslab.org" /><meta name="twitter:title" content=""/>
 <meta name="twitter:description" content="Funding MAILLE: Microkernal Application Information fLow with Logic-based Enforcement
 John Hatcliff (K-State PI), Robby; and Todd Carpenter (Lead PI) at Adventium Labs
 U.S. Air Force Research Laboratory (AFRL) Small Business Innovation Research (SBIR) Phase II
