--- a/projects/index.html
+++ b/projects/index.html
@@ -51,12 +51,10 @@ Cadena &ndash; an Eclipse-based extensible integrated modeling and development f
 JMLEclipse &ndash; an Eclipse-based front-end for the Java Modeling Language (JML)
 MDCF">
 
-<meta itemprop="wordCount" content="53"><meta itemprop="image" content="https://robby.santoslab.org"/>
+<meta itemprop="wordCount" content="53"><meta itemprop="image" content="https://robby.santoslab.org" />
 <meta itemprop="keywords" content="" />
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://robby.santoslab.org"/>
-
-<meta name="twitter:title" content=""/>
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://robby.santoslab.org" /><meta name="twitter:title" content=""/>
 <meta name="twitter:description" content="Projects Current Sireum &ndash; A High Assurance System Engineering Platform Past Bandera &ndash; a software model checker for concurrent Java programs
 Bogor &ndash; a software model checking framework
 Cadena &ndash; an Eclipse-based extensible integrated modeling and development framework for component-based systems
