--- a/teaching/index.html
+++ b/teaching/index.html
@@ -47,12 +47,10 @@ CIS 301: Logical Foundations of Programming" />
 The course teaches modern compiler techniques applied to general-purpose programming language. The goal of the course is to give students a working knowledge of the foundations, tools, and engineering approaches used in developing formal language translators. The emphasis is on the construction of compilers to position students to build translators for little languages in their careers.
 CIS 301: Logical Foundations of Programming">
 
-<meta itemprop="wordCount" content="249"><meta itemprop="image" content="https://robby.santoslab.org"/>
+<meta itemprop="wordCount" content="249"><meta itemprop="image" content="https://robby.santoslab.org" />
 <meta itemprop="keywords" content="" />
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://robby.santoslab.org"/>
-
-<meta name="twitter:title" content=""/>
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://robby.santoslab.org" /><meta name="twitter:title" content=""/>
 <meta name="twitter:description" content="Teaching CIS 706/801: Translator Design I &amp; II
 The course teaches modern compiler techniques applied to general-purpose programming language. The goal of the course is to give students a working knowledge of the foundations, tools, and engineering approaches used in developing formal language translators. The emphasis is on the construction of compilers to position students to build translators for little languages in their careers.
 CIS 301: Logical Foundations of Programming"/>
