--- a/404.html
+++ b/404.html
@@ -42,10 +42,8 @@
 
 <meta itemprop="name" content="404 Page not found">
 <meta itemprop="description" content="Robby&#39;s Homepage">
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://robby.santoslab.org"/>
-
-<meta name="twitter:title" content="404 Page not found"/>
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://robby.santoslab.org" /><meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Robby&#39;s Homepage"/>
 
 
